testing/docker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker
  template:
    metadata:
      labels:
        app: docker
    spec:
      containers:
        - name: docker
          image: docker
          securityContext:
            privileged: true
