testing/my-private-reg-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    image: 13.50.194.17:5000/hello-world-war:12
  imagePullSecrets:
  - name: regcred
