testing/private-reg-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-war
spec:
  containers:
  - name: hello-world-war
    image: 13.53.36.230:5000/hello-world-war:2
