testing/nexus-docker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-docker-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 8g
spec:
  rules:
    - http:
        paths:
        - backend:
            service:
              name: nexus-service
              port:
                number: 8811
          path: /
          pathType: Prefix
